version 1.4
- added generic parser EventBasedParser which is designed to unroll events that were stored during initialization phase
- NEERCHtmlParser and NEERCXmlParser were rewritten and now are derived from EventBasedParser
- NEERCXmlParser now can download XML from URL
- added NYParser to parse New York Regional contests
- new features were added to XMLParser
- memory leaks due to improper handlind of xmlChar pointers were fixed

version 1.31
- now ProblemCount can be either a number or an id of last problem written in capital latin letters
- added attribute IgnoreColumns to EjudgeParser. If your standings has additional columns, they can be excluded from consideration

version 1.3
- now standings are built by lua script specified by user
- fixed possible issue with more than 26 problems in contest
- parser style can now be any string, not only one of preset number

version 1.2
- merged EjudgeLinkParser and EjudgeFileParser into one EjudgeParser
- rewritten Timer and added attribute
- it is possible to compile project without libcurl, though the program will be unable to download files from internet
- renamed Timeout property. Now it is called RefreshRate
- now source contains some commentaries
- added new property to all parsers - Prefix. All parsers should prepend team names, that are created or changed by them.

version 1.1:
- rewrote parser registration. Now the only place to modify in order to add new parser is main()
- added help message if no xml config is provided
- added new Timer parser