@@ -1,0 +1,20 @@
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
+output.html
+config.h
+.deps
+.dirstamp
+src/Parsers/.dirstamp
+*.o
+src/stamp-h1
+standingsbuilder
+
